@@ -11,6 +11,10 @@ CVS code -
 	  doc/man/Makefile.am, doc/man/fr/Makefile.am, and
 	  doc/texinfo/Makefile.am. (DLR)
 - files.c:
+  do_writeout()
+	- When setting retval to the return value of
+	  write_(marked_)?file(), use the "?" operator instead of an
+	  if/else clause. (DLR)
   is_dir()
 	- Don't assign dirptr's value using buf until we've asserted
 	  that buf isn't NULL. (DLR)
